--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
+	* emit-rtl.c (copy_rtx_if_shared): Add comment about its use of
+	copy_rtx_if_shared_1.
+	(copy_rtx_if_shared_1): Add comment about what the function does.
+
 	* c-decl.c (finish_function): Change order of checks.
 	(c_expand_body): Likewise.
 
