PR c++/12397 	* typeck.c (finish_class_member_access_expr): Don't tree 	IDENTIFIER_NODEs as non-dependent expressions.
	PR c++/12397
	* g++.dg/template/lookup3.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74949 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12397
+	* g++.dg/template/lookup3.C: New test.
+
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* g++.dg/template/recurse1.C: New test
