2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
        PR c++/5050
        * tree.c (cp_start_inlining): Remove.
        (cp_end_inlining): Remove.
        * cp-lang.c (LANG_HOOKS_TREE_INLINING_START_INLINING): Do not define.
        (LANG_HOOKS_TREE_INLINING_END_INLINING): Do not define.
        * cp-tree.h (cp_start_inlining): Do not declare.
        (cp_end_inlining): Do not declare.

	PR c++/5050
        * g++.dg/template/recurse1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74950 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c++/5050
+	* g++.dg/template/recurse1.C: New test.
+
 2003-12-21  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/11554
