* c-common.c (flag_external_templates): Remove. 	(flag_alt_external_templates): Likewise. 	* c-common.h (flag_external_templates): Remove. 	(flag_alt_external_templates): Likewise. 	* c-opts.c (c_common_handle_option): Unsupport 	-falt-external-templates and -ftemplates. 	* doc/invoke.texi: Remove mention of -fexternal-templates and 	-falt-external-templates.
	* decl.c (start_function): Do not check
	flag_alt_external_templates or flag_external_templates.
	* decl2.c (warn_if_unknown_interface): Likewise.
	* lex.c (extract_interface_info): Likewise.
	* pt.c (lookup_template_class): Likewise.

	PR c++/12862
	* name-lookup.c (pushdecl): Look up all namespace-scope entities
	in their corresponding namespace.

	* g++.old-deja/g++.jason/template18.C: Remove.
	* g++.old-deja/g++.jason/template37.C: Likewise.

	PR c++/12862
	* g++.dg/lookup/ns1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-common.c (flag_external_templates): Remove.
+	(flag_alt_external_templates): Likewise.
+	* c-common.h (flag_external_templates): Remove.
+	(flag_alt_external_templates): Likewise.
+	* c-opts.c (c_common_handle_option): Unsupport
+	-falt-external-templates and -ftemplates.
+	* doc/invoke.texi: Remove mention of -fexternal-templates and
+	-falt-external-templates.
+	
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR target/13466
