--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2003-12-22  Mark Mitchell  <mark@codesourcery.com>
 
+	* doc/invoke.texi: Deprecate -fwritable-strings.
+
 	* c-common.c (flag_external_templates): Remove.
 	(flag_alt_external_templates): Likewise.
 	* c-common.h (flag_external_templates): Remove.
