--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR c/13382
+	* c-typeck.c (convert_for_assignment): When converting from
+	integral type to pointer type, always call convert.
+
 2003-12-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* doc/invoke.texi: Deprecate -fwritable-strings.
