--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/null-pointer-1.c: New test.
+
 2003-12-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.old-deja/g++.jason/template18.C: Remove.
