PR c/13382 	* c-typeck.c (convert_for_assignment): When converting from 	integral type to pointer type, always call convert.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74963 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR c/13382
+	* c-typeck.c (convert_for_assignment): When converting from
+	integral type to pointer type, always call convert.
+
 2003-12-22  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
         PR target/11271
