PR optimization/13394 	* toplev.c (rest_of_compilation): Move call to 	check_function_return_warnings right after the sibcall 	optimization pass.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74964 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
+	* gcc.dg/noreturn-7.c: New test.
+
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
 	* gcc.dg/null-pointer-1.c: New test.
 
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
