* config/rs6000/rs6000.md: Change many instances of '! 	TARGET_POWERPC64' to 'TARGET_32BIT' when the pattern being guarded 	was guarded only because it changed CR0 or the carry bit in XER.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74966 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-22  Geoffrey Keating  <geoffk@apple.com>
+
+	* config/rs6000/rs6000.md: Change many instances of '!
+	TARGET_POWERPC64' to 'TARGET_32BIT' when the pattern being guarded
+	was guarded only because it changed CR0 or the carry bit in XER.
+
 2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/13394
