--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-21  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c/11995
+	* gcc.dg/20031223-1.c: New test.
+
 2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/noreturn-7.c: New test.
