PR target/11576 	* config/h8300/h8300.h (CONSTANT_ADDRESS_P): Allow CONST and 	HIGH on all variants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74972 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-23  Kazu Hirata  <kazu@cs.umass.edu>
+
+	PR target/11576
+	* config/h8300/h8300.h (CONSTANT_ADDRESS_P): Allow CONST and
+	HIGH on all variants.
+
 2003-12-23  Matthias Klose  <doko@debian.org>
 
 	* config/mips/linux.h (LIB_SPEC): Use -lpthread when
