* c-common.c (flag_abi_version): Default to 2. 	* c-cppbuiltin.c (c_cpp_builtins): Define __GXX_ABI_VERSION 	uniformly for versions above 2. 	* doc/invoke.texi: Update documentation for -fabi-version.
	* cp-lang.c (cp_expr_size): Return zero for empty classes.

	* cp-tree.h (warn_if_uknown_interface): Remove unused function.
	* decl2.c (warn_if_unknown_interface): Likewise.

	* g++.dg/abi/macro0.C: New test.
	* g++.dg/abi/macro1.C: Likewise.
	* g++.dg/abi/macro2.C: Likewise.

	* g++.dg/abi/bitfield5.C: Add explicit -fabi-version=1 option.
	* g++.dg/abi/bitfield7.C: Likewise.
	* g++.dg/abi/dtor2.C: Likewise.
	* g++.dg/abi/mangle11.C: Likewise.
	* g++.dg/abi/mangle12.C: Likewise.
	* g++.dg/abi/mangle14.C: Likewise.
	* g++.dg/abi/mangle17.C: Likewise.
	* g++.dg/abi/vbase10.C: Likewise.
	* g++.dg/abi/vbase14.C: Likewise.
	* g++.dg/template/qualttp17.C: Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74973 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-23  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-lang.c (cp_expr_size): Return zero for empty classes.
+
+	* cp-tree.h (warn_if_uknown_interface): Remove unused function.
+	* decl2.c (warn_if_unknown_interface): Likewise.
+
 2003-12-23  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/13387
