--- a/csl-arm-branch/libiberty/ChangeLog
+++ b/csl-arm-branch/libiberty/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-23  Zack Weinberg  <zack@codesourcery.com>
+	    Nathan Sidwell  <nathan@codesourcery.com>
+	    Mark Mitchell  <mark@codesourcery.com>
+
+	* pex-common.c (STDERR_FILE_NO): Define.
+	* pex-win32.c: Rework extensively.
+
 2003-10-20  J. Brobecker  <brobecker@gnat.com>
 
 	* cplus-dem.c (demangle_template): Register a new Btype only
