* MAINTAINERS: Remove the mn10200 maintainer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74978 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-23  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* MAINTAINERS: Remove the mn10200 maintainer.
+
 2003-12-21  Bernardo Innocenti  <bernie@develer.com>
  
  	* configure.in (*-*-uclinux): Exclude newlib, libgloss and rda.
