* pex-unix.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74983 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/libiberty/ChangeLog
+++ b/csl-arm-branch/libiberty/ChangeLog
@@ -4,6 +4,7 @@
 
 	* pex-common.c (STDERR_FILE_NO): Define.
 	* pex-win32.c: Rework extensively.
+	* pex-unix.c: Likewise.
 
 2003-10-20  J. Brobecker  <brobecker@gnat.com>
 
