* g++.dg/lookup/java1.C: Use -fdollars-in-identifiers when 	compiling. 	* g++.dg/lookup/java2.C: Likewise. 	* gcc.dg/cpp/lexident.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74990 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/testsuite/ChangeLog
+++ b/csl-arm-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-23  Mark Mitchell  <mark@codesourcery.com>
 
+	* g++.dg/lookup/java1.C: Use -fdollars-in-identifiers when
+	compiling.
+	* g++.dg/lookup/java2.C: Likewise.
+	* gcc.dg/cpp/lexident.c: Likewise.
+	
+2003-12-23  Mark Mitchell  <mark@codesourcery.com>
+
 	* g++.dg/abi/macro0.C: New test.
 	* g++.dg/abi/macro1.C: Likewise.
 	* g++.dg/abi/macro2.C: Likewise.
