* g++.dg/lookup/java1.C: Use -fdollars-in-identifiers when 	compiling. 	* g++.dg/lookup/java2.C: Likewise. 	* gcc.dg/cpp/lexident.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74992 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-23  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/lookup/java1.C: Use -fdollars-in-identifiers when
+	compiling.
+	* g++.dg/lookup/java2.C: Likewise.
+	* gcc.dg/cpp/lexident.c: Likewise.
+
 2003-12-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* gcc.c-torture/compile/20020604-1.c: XFAIL on H8 if -mn is
