* config/arm/arm.c (all_architectures): Add armv6. 	* doc/invoke.texi: Document it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74993 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/doc/invoke.texi
+++ b/csl-arm-branch/gcc/doc/invoke.texi
@@ -6630,7 +6630,7 @@ name to determine what kind of instructions it can emit when generating
 assembly code.  This option can be used in conjunction with or instead
 of the @option{-mcpu=} option.  Permissible names are: @samp{armv2},
 @samp{armv2a}, @samp{armv3}, @samp{armv3m}, @samp{armv4}, @samp{armv4t},
-@samp{armv5}, @samp{armv5t}, @samp{armv5te}, @samp{armv6j},
+@samp{armv5}, @samp{armv5t}, @samp{armv5te}, @samp{armv6}, @samp{armv6j},
 @samp{iwmmxt}, @samp{ep9312}.
 
 @item -mfpu=@var{name}
