* calls.c (expand_call): Recognize calls to "sqrt" and create 	corresponding notes.
	* g++.dg/bprob/bprob.exp: Load target-supports.exp
	* g77.dg/bprob/bprob.exp: Likewise.
	* gcc.misc-tests/bprob.exp: Likewise.
	* gcc.dg/builtins-18.c: Use builtins-config.h.  Do not test float
	variants on systems where the library does not provide that
	functionality.
	* gcc.dg/builtins-20.c: Use builtins-config.h.
	* gcc.dg/builtins-config.h: New file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75003 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-23  Mark Mitchell  <mark@codesourcery.com>
+
+	* calls.c (expand_call): Recognize calls to "sqrt" and create
+	corresponding notes.
+
 2003-12-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* config/mips/mips.c (override_options): Use `inform' instead
