* config/arm/arm.c (arm_arch6j): New variable. 	(arm_override_options): Set it. 	(arm_emit_extendsi): New function. 	* config/arm/arm-protos.h (arm_emit_extendsi): Add prototype. 	* config/arm/arm.h (arm_arch6j): Declare. 	* config/arm/arm.md: Add sign/zero extend insns.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75006 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-24  Paul Brook  <paul@codesourcery.com>
+
+	* config/arm/arm.c (arm_arch6j): New variable.
+	(arm_override_options): Set it.
+	(arm_emit_extendsi): New function.
+	* config/arm/arm-protos.h (arm_emit_extendsi): Add prototype.
+	* config/arm/arm.h (arm_arch6j): Declare.
+	* config/arm/arm.md: Add sign/zero extend insns.
+
 2003-12-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* calls.c (expand_call): Recognize calls to "sqrt" and create
