* doc/md.texi: Document PowerPC vector register constraint letter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75009 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/md.texi
+++ b/gcc/doc/md.texi
@@ -1439,13 +1439,16 @@ Constant integer 1
 A floating point constant 0.0
 @end table
 
-@item IBM RS6000---@file{rs6000.h}
+@item PowerPC and IBM RS6000---@file{rs6000.h}
 @table @code
 @item b
 Address base register
 
 @item f
 Floating point register
+
+@item v
+Vector register
 
 @item h
 @samp{MQ}, @samp{CTR}, or @samp{LINK} register
